--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
       </div>
 
       <div class="row-fluid back">
-        <img src="media/1.svg" class="background">
+        <img src="media/1.svg" alt="..." class="background">
       </div>
 
       <div class="row justify-content-between mb-5">
@@ -110,10 +110,10 @@
 
                 <div class="mycol withoutpadding">
                   <div class="myrow withoutpadding mb-4">
-                    <input type="text" class="form-control" id="inputForm" placeholder="Имя">
+                    <input type="text" class="form-control" id="inputForm1" placeholder="Имя">
                   </div>
                   <div class="myrow withoutpadding">
-                    <input type="email" class="form-control" id="inputForm" placeholder="E-mail">
+                    <input type="email" class="form-control" id="inputForm2" placeholder="E-mail">
                   </div>
                 </div>
 
@@ -132,8 +132,8 @@
 
         <div class="row-fluid back">
           <div class="background" id="BOTTOM">
-            <img src="media/bottom.png" id="BOTIMG">
-            <img src="media/DT.svg" id="DT">
+            <img src="media/bottom.png" alt="..." id="BOTIMG">
+            <img src="media/DT.svg" alt="..." id="DT">
             <h6 id="BOTTEXT">ДИЗАЙН И КОД АНИСИМОВ АРТЁМ 2022</h6> 
           </div>
         </div>
