--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="col-3 downpos">
             <div class="position-relative top-50 translate-middle-y">
-              <h6>последняя работа</h6>
+              <h6 id="LAST">последняя работа</h6>
               <h1 id="HEAD"><code>Центр моды<br>и искусств<br>EP YAYING</code></h1>
               <img src="media/mobile.svg" alt="..." class="background" id="PIC3">
               <button type="button" class="btn btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#firstPage">Подробнее</button>       
