--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row row_big">
 
           <div class="col-8">
-            <img id="STADI" src="media/stad.png" class="img-fluid" alt="...">
+            <img src="media/stad.png" class="img-fluid stadi" alt="...">
           </div>
   
           <div class="col-4">
@@ -95,7 +95,7 @@
         </div>
 
         <div class="row row_small">
-          <img id="STADI" src="media/stad.png" class="img-fluid" alt="...">
+          <img src="media/stad.png" class="img-fluid stadi" alt="...">
           <div class="stadblock">
             <div class="brownblock">
             <h6>призер StadiumDB</h6>
@@ -222,10 +222,10 @@
             </div>
             
             <div class="modal-footer">
-              <button type="button" class="btn-close" id="MICROBUT" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-              <button type="button" id="BIGBUT" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-              <button type="button" id="LITBUT" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-              <button type="button" class="btn btn-dark" id="NEXTBUT" data-bs-toggle="modal" data-bs-target="#secondPage">Следующая работа</button>
+              <button type="button" class="btn-close btn_micro" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+              <button type="button" class="btn btn-secondary btn_big" data-bs-dismiss="modal">Закрыть</button>
+              <button type="button" class="btn btn-secondary btn_lit" data-bs-dismiss="modal">Закрыть</button>
+              <button type="button" class="btn btn-dark btn_next" data-bs-toggle="modal" data-bs-target="#secondPage">Следующая работа</button>
             </div>
           </div>
         </div>
@@ -293,10 +293,10 @@
           </div>
           
           <div class="modal-footer">
-            <button type="button" class="btn-close" id="MICROBUT" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-            <button type="button" id="BIGBUT" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-            <button type="button" id="LITBUT" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-            <button type="button" class="btn btn-dark" id="NEXTBUT" data-bs-toggle="modal" data-bs-target="#firstPage">Следующая работа</button>
+            <button type="button" class="btn-close btn_micro" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+            <button type="button" class="btn btn-secondary btn_big" data-bs-dismiss="modal">Закрыть</button>
+            <button type="button" class="btn btn-secondary btn_lit" data-bs-dismiss="modal">Закрыть</button>
+            <button type="button" class="btn btn-dark btn_next" data-bs-toggle="modal" data-bs-target="#secondPage">Следующая работа</button>
           </div>
         </div>
       </div>
