--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <button type="button" class="btn-close btn_micro" data-bs-dismiss="modal" aria-label="Закрыть"></button>
             <button type="button" class="btn btn-secondary btn_big" data-bs-dismiss="modal">Закрыть</button>
             <button type="button" class="btn btn-secondary btn_lit" data-bs-dismiss="modal">Закрыть</button>
-            <button type="button" class="btn btn-dark btn_next" data-bs-toggle="modal" data-bs-target="#secondPage">Следующая работа</button>
+            <button type="button" class="btn btn-dark btn_next" data-bs-toggle="modal" data-bs-target="#firstPage">Следующая работа</button>
           </div>
         </div>
       </div>
